--- a/frontend-01blog/src/app/app.component.scss
+++ b/frontend-01blog/src/app/app.component.scss
@@ -210,15 +210,16 @@
 }
 
 .badge {
-  position: absolute;
-  top: 2px;
-  right: 2px;
+  top: 4px;
+  right: 4px;
   background: #ef4444;
   color: white;
-  font-size: 0.7rem;
-  padding: 2px 6px;
-  border-radius: 10px;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  font-size: 0.65rem;
+  font-weight: bold;
+  padding: 2px 5px;
+  border-radius: 999px;
+  min-width: 14px;
+  text-align: center;
 }
 
 /* ==========================================================================
@@ -226,18 +227,18 @@
    ========================================================================== */
 .notification-dropdown {
   position: absolute;
-  top: 55px;
+  top: 50px;
   right: -10px;
-  width: 320px;
+  width: 300px;
   border-radius: 12px;
-  background: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
   padding: 15px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   z-index: 1001;
-  animation: slideDown 0.2s ease-out;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  animation: _ngcontent-ng-c289296288_slideDown 0.2s ease-out;
+  background: #d9d9d9bf;
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(12px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .notification-dropdown h3 {
